<resources>
    <string name="app_name">MScCS</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$s</string>

    <string name="program_overview">Program Overview</string>
    <string name="program_overview_detail"><![CDATA[
        The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science. The programme is credit unit based, with courses of both applied and fundamental nature. Students can choose from a comprehensive and diversified study in Computer Science courses or focussed streams of study. Focussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain.
    ]]></string>


    <string name="student_links_content">
        The University of Hong Kong Home Page\n
        -   https://www.hku.hk\n
        \n
        The Faculty of Engineering\n
        -  http://engg.hku.hk\n
        \n
        Department of Computer Science\n
        -  http://www.cs.hku.hk\n
        \n
        Information Technology Services\n
        -  http://www.its.hku.hk\n
        \n
        Centre of Development and Resources for Students\n
        -  http://www.cedars.hku.hk\n
        \n
        China Affairs Office\n
        -  http://www.aal.hku.hk/cao\n\n
        The HKU Libraries\n
        -  https://lib.hku.hk/\n
  </string>

    <string name="student_courses">
        MSc(CompSc) Courses\n
        \n
        Cyber Security\n
        COMP7806\t\tTopic in information security\n
        COMP7901\t\tLegal protection of digital property\n
        COMP7903\t\tDigital investigation and forensics\n
        COMP7904\t\tInformation security: attacks and defense\n
        COMP7905\t\tReverse engineering and malware analysis\n
        COMP7906\t\tIntroduction to cyber security\n
        \n
        Financial Computing\n
        COMP7103\t\tData mining\n
        COMP7405\t\tTechniques in computational finance\n
        COMP7406\t\tSoftware development for quantitative finance\n
        COMP7407\t\tSecurities transaction banking\n
        COMP7408\t\tDistributed ledger and blockchain technology\n
        COMP7802\t\tIntroduction to financial computing\n
        COMP7808\t\tTopic in financial computing\n
        COMP7906\t\tIntroduction to cyber security\n
        \n
        Multimedia Computing\n
        COMP7502\t\tImage processing and computer vision\n
        COMP7503\t\tMultimedia technologies\n
        COMP7504\t\tPattern recognition and applications\n
        COMP7505\t\tUser interface design and development\n
        COMP7506\t\tSmart phone apps development\n
        COMP7507\t\tVisualization and visual analytics\n
        COMP7604\t\tGame design and development\n
        COMP7807\t\tTopic in multimedia computing\n
        \n
        Others\n
        COMP7104\t\tAdvanced database systems\n
        COMP7201\t\tAnalysis and design of enterprise applications in UML\n
        COMP7203\t\tModern software design\n
        COMP7205\t\tEnterprise architecture\n
        COMP7303\t\tHigh-performance computing\n
        COMP7304\t\tThe wireless Internet and mobile network\n
        COMP7305\t\tCluster and cloud computing\n
        COMP7306\t\tWeb technologies\n
        COMP7307\t\tAdvanced real-time embedded systems and applications\n
        COMP7403\t\tComputational molecular biology\n
        COMP7404\t\tComputational intelligence and machine learning\n
        COMP7606\t\tDeep learning\n
        COMP7801\t\tTopic in computer science\n
        COMP7805\t\tTopic in computer network and systems\n
        \n
        Capstone Experience\n
        COMP7704\t\tDissertation (24 credits)\n
        COMP7705\t\tProject (12 credits)\n


    </string>
    <string name="title_activity_admission">2019 Admission</string>
    <string name="title_activity_plan">MScCS</string>

    <string name="more_info">More information</string>

    <string name="application_deadline">Application Deadline</string>
    <string name="application_deadline_details"><![CDATA[
        Main round: 31 December 2018\n
        Clearing round: 12:00nn (HKT), 15 April 2019\n
        To be considered, you must submit a complete application, with supporting materials uploaded online, before the deadline.
    ]]></string>

    <string name="composition_fee">Composition Fees</string>
    <string name="composition_fee_details"><![CDATA[
        The composition fee for each 6-credit course is HK$13,000*. Project has a composition fee of HK$26,000 and the Dissertation has a composition fee of HK$52,000. Total composition fee for the two study modes are therefore as follows:\n
        \n
        10 courses + Project:\n
        (HK$13,000 x 10) + (HK$26,000) = HK$156,000\n
        \n
        8 Courses + Dissertation:\n
        (HK$13,000 x 8) + (HK$52,000) = HK$156,000\n
        \n
        * Pending for University\'s approval\n
    ]]></string>

    <string name="programme_schedule">Programme Schedule</string>
    <string name="programme_schedule_details">
        <![CDATA[
            The MSc(CompSc) programme is offered in both full-time and part-time modes.\n

            There are 3 semesters in an academic year, i.e. semester 1: September – December, semester 2: January – May and the summer semester: June – August.\n

            Part-time: 2-3 years\n
            Full-time: 1-2 years\n

            Classes are usually conducted in weekday evenings from 7:00 p.m., or during weekends. Some courses will be offered mainly for full-time students in weekday daytime.
        ]]>
    </string>

    <string name="requirement_more">Admission Requirement</string>
    <string name="learning_environment">Learning Environment</string>

    <string name="plan_connect">Connect with school</string>
    <string name="overview_detail">Program Overview Detail</string>
    <string name="about_hku">About HKU</string>
    <string name="about_faculty">Faculty</string>
    <string name="message_from_program">Message from Program Director</string>

    <string name="connection_prefer">Tell us what you prefer:</string>
    <string name="connection_chat">coffee chat</string>
    <string name="connection_tour">school tour</string>
    <string name="connection_class">sample class</string>
    <string name="connection_alumni_chat">alumni chat</string>
    <string name="connection_phone">phone call</string>
    <string name="connection_submit">Submit</string>

    <string name="department_contact">
        <![CDATA[
            Contact us\n
            The MSc Programme Office\n
            Department of Computer Science\n
            P3-02, Graduate House\n
            The University of Hong Kong\n
            \n
            Tel: (852) 3917 1828\n
            Fax: (852) 2547 4442\n
            Email: msccs@cs.hku.hk\n
            Office Hours:\n
             Mon-Fri: 9:00am-12:30pm\n
                  1:30pm-5:00pm\n
               Sat: 9:00am-12:00pm
        ]]>
    </string>
</resources>
