<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PlanActivity"
    tools:showIn="@layout/activity_plan">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_plan_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_plan_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_connect"
                android:textSize="20sp"
                android:theme="@style/PrimaryFlatButton"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_overview_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_overview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_detail"
                android:textSize="20sp"
                android:theme="@style/PrimaryFlatButton"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_about_hku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_about_hku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_hku"
                android:textSize="20sp"
                android:theme="@style/PrimaryFlatButton"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_faculty"
                android:textSize="20sp"
                android:theme="@style/PrimaryFlatButton"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_from_program"
                android:textSize="20sp"
                android:theme="@style/PrimaryFlatButton"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>